--- a/WSS.XSD/wss.xsd.config
+++ b/WSS.XSD/wss.xsd.config
@@ -2,6 +2,7 @@
 <Configuration xmlns="http://www.microsoft.com/xml/schema/linq">
   <Namespaces>
     <Namespace Schema="http://schemas.microsoft.com/sharepoint/" Clr="Microsoft.Schemas.SharePoint" />
+    <Namespace Schema="http://schemas.microsoft.com/sharepoint/caml" Clr="Microsoft.Schemas.SharePoint.Caml" />
   </Namespaces>
   <Validation>
   	<VerifyRequired>true</VerifyRequired>
