--- a/WSS.XSD/WSS.XSD.csproj
+++ b/WSS.XSD/WSS.XSD.csproj
@@ -10,6 +10,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AgileObjects.ReadableExpressions" Version="2.3.1" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.1.0" />
+    <PackageReference Include="Microsoft.SharePoint.Client" Version="14.0.4762.1000" />
     <PackageReference Include="Remotion.Linq" Version="2.2.0" />
     <PackageReference Include="XObjectsCore" Version="3.0.0.2" />
   </ItemGroup>
