Added another test. Fixed build error with caml_simplication.xsd.cs code.

--- a/WSS.XSDTests/WSS.XSDTests.csproj
+++ b/WSS.XSDTests/WSS.XSDTests.csproj
@@ -20,4 +20,10 @@
     <ProjectReference Include="..\WSS.XSD\WSS.XSD.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="SitePagesSchema.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
